--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -238,7 +238,7 @@ msgstr "Цель создания этого сайта"
 msgid ""
 "This website is made to share some useful information about Uzbek "
 "nationality and\n"
-"                    traditions. <b><em>Uznation.inha.uz</em></b>\n"
+"                    traditions. <b><em>Uznations.iutlab.uz</em></b>\n"
 "                    is always ready to give help for users, volunteers, "
 "local people so that they can easily\n"
 "                    get useful information on Uzbekistan and its "
@@ -266,7 +266,7 @@ msgid ""
 "                    wonderful future”."
 msgstr ""
 "Этот сайт сделан для обмена полезной информацией о узбекской национальности "
-"и традиций.<b><em>Uznation.inha.uz</em></b>\n"
+"и традиций.<b><em>Uznations.iutlab.uz</em></b>\n"
 "всегда готов оказать помощь для пользователей, волонтеров, местных "
 "жителей, чтобы они могли легко получить полезную информацию по Узбекистану и "
 "его национальности. В этом веб-сайте, вы можете найти большое количество "
@@ -312,7 +312,7 @@ msgid ""
 "site used their useful information as an\n"
 "                    extra source. Other special thanks are for<b><em> "
 "Voriskhon</em></b> for making amazing logo for\n"
-"                    <b>Uznation.inha.uz</b>"
+"                    <b>Uznations.iutlab.uz</b>"
 msgstr ""
 "Веб-сайт, который вы смотрите прямо сейчас было сделано 3-члена команды."
 "Наш «бэкэнд» разработчик <b><em>Умар Холдорбеков</em></b> и «Фронтенд» разработчики <b><em>Мафтуна "
@@ -320,7 +320,7 @@ msgstr ""
 "На текущий момент, мы все учимся в Университете Инха в г.Ташкент в факультете ICE. "
 "Мы рады сказать спасибо за веб-сайтов, которые согласились работать с нами и, "
 "таким образом, наш сайт использовали свои полезную информацию в качестве дополнительного источника. "
-"И особая благодарность за<b><em> Ворисхон</em></b> для создания удивительный логотип для <b>Uznation.inha.uz</b>"
+"И особая благодарность за<b><em> Ворисхон</em></b> для создания удивительный логотип для <b>Uznations.iutlab.uz</b>"
 #: .\templates\big-text.html:15
 msgid "Tags"
 msgstr "Теги"
